feat: actualizar configuración CORS para permitir todos los orígenes en entornos de desarrollo y producción